// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ceKbHJ Picker__InputContainer-sc-1xwpkqn-0 ciLHEA"
    id="15865553920114537824621"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Color Picker
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 eGDhqa"
        color="jobs"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 dSCfil"
        color="bi"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 eHeTdp"
        color="research"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-check fa-w-16 Icon__StyledIcon-sc-1oa9m1v-1 cJJNyd"
          color={null}
          data-icon="check"
          data-prefix="far"
          focusable="false"
          fontSize="inherit"
          id={null}
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M435.848 83.466L172.804 346.51l-96.652-96.652c-4.686-4.686-12.284-4.686-16.971 0l-28.284 28.284c-4.686 4.686-4.686 12.284 0 16.971l133.421 133.421c4.686 4.686 12.284 4.686 16.971 0l299.813-299.813c4.686-4.686 4.686-12.284 0-16.971l-28.284-28.284c-4.686-4.686-12.284-4.686-16.97 0z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
      </button>
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 keJmmc"
        color="brand1"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 kGlKsI"
        color="brand2"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 HTzlT"
        color="brand3"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 gZeCSS"
        color="brand4"
        height="1.5rem"
        onClick={null}
        width="1.5rem"
      />
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ceKbHJ Picker__InputContainer-sc-1xwpkqn-0 ciLHEA"
    id="158655539458118609048712"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Standard Swatches
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 eGDhqa"
        color="jobs"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 eHeTdp"
        color="research"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 dSCfil"
        color="bi"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
    </section>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "padding": "2rem",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 ceKbHJ Picker__InputContainer-sc-1xwpkqn-0 ciLHEA"
    id="158655539663816400642153"
    rows={null}
  >
    <label
      className="Typography__StyledLabel-sc-19auepv-0 gKzexq"
      fontSize="0.876em"
      fontWeight={600}
      htmlFor={null}
      letterSpacing="0px"
    >
      Square Swatches
    </label>
    <section
      className="Grid__GridWrapper-sc-1ntp7gx-0 ezarLU"
      id={null}
      rows={null}
    >
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 bqPWCi"
        color="jobs"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 cPXZUR"
        color="research"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
      <button
        className="Picker__Swatch-sc-1xwpkqn-1 iIbrJh"
        color="bi"
        height="1.5rem"
        onClick={[Function]}
        width="1.5rem"
      />
    </section>
  </section>
</div>
`;
